# pmatos.github.io

./: .eleventy.js  .gitignore  404.html  CLAUDE.md  CNAME  README.md  about-me.html  blog.html  chi-sono.html  eleventy.config.mjs  feed.xml  igalia.xml  index.html  linklog-feed.xml  linklog.html  llog.js  manifest.webmanifest  offline.html  package-lock.json  package.json  pyproject.toml  racket-money-mailing-list.html  racket-money.html  robots.txt  sitemap.xml  tailwind.config.js
.github/: dependabot.yml
blog/: a-brief-look-at-the-webkit-workflow.html  a-tour-of-the-for-of-implementation-for-32bits-jsc.html  announcing-html-examples-html-examples.html  announcing-racket-bitvectors-bv.html  claude-code-usage-in-waybar.html  code-is-free-now-whats-left-is-us.html  creduce-it-s-a-kind-of-magic.html  creduce-its-a-kind-of-magic.html  cross-arch-reproducibility-using-containers.html  daring-to-imagine.html  esbmc-plugin-update-python-support-a-new-home-and-where-this-is-going.html  fex-x87-stack-optimization.html  formal-verification-in-your-terminal-esbmc-meets-claude-code.html  from-middle-c-to-concert.html  hello-and-a-quick-comments-test.html  how-fast-do-you-want-it.html  introducing-musiker-an-interactive-timeline-of-classical-music.html  jsc-what-are-my-options.html  jsse-a-javascript-engine-built-by-an-agent.html  life-on-genai-in-2025-part-1-intro-and-education.html  my-first-blog-post.html  my-second-blog-post.html  my-third-blog-post.html  pewpew-the-terminals-are-down.html  s10-overview.html  webassembly-reference-types-in-clang-llvm.html  (+1 more)
css/: style.css
(+75 files in other folders)
